# SouSiT

./: LICENSE  Main.hs  README  README.md  sousit.cabal
Data/: SouSiT.hs
Data/SouSiT/: File.hs  Handle.hs  List.hs  STM.hs  Serial.hs  Sink.hs  Source.hs  Trans.hs  TransBase.hs  Transform.hs
test/: .gitignore  PerformanceTest.hs  TransTest.hs
