name:                sousit
version:             0.2
synopsis:            Source/Sink/Transform: An alternative to lazy IO and iteratees
--description:
license:             BSD3
license-file:        LICENSE
author:              Mario Siegenthaler
maintainer:          msiegenthaler@inventsoft.ch
copyright:
category:            Control
build-type:          Simple
cabal-version:       >= 1.8


library
  exposed-modules: Data.SouSiT, Data.SouSiT.Sink, Data.SouSiT.Source, Data.SouSiT.Transform,
                   Data.SouSiT.Trans, Data.SouSiT.List, Data.SouSiT.File,
                   Data.SouSiT.Handle, Data.SouSiT.STM
  build-depends:   base > 4, bytestring, stm, mtl
  ghc-options:     -Wall -fno-warn-missing-signatures


test-suite sousit-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-Is: TransTest.hs
  build-Depends: base > 4, mtl, sousit,
                 QuickCheck > 2, test-framework >= 0.3.3, test-framework-quickcheck2 >= 0.2.9  
