name:                sousit
version:             0.2
synopsis:            Source/Sink/Transform: An alternative to lazy IO and iteratees.

description:         Haskell library for Sources, Sinks and Transformers. The data is pushed from the source through the transfomers into the sink. The sink or a transfomer can decide at any time to end the transfer (see Iteratees). The transformers are very reusable since they can not depend on side effects, so they can be used with files as well as with simple lists.

license:             BSD3
license-file:        LICENSE
author:              Mario Siegenthaler
maintainer:          msiegenthaler@inventsoft.ch
homepage:            https://github.com/msiegenthaler/SouSiT
copyright:           (c) 2012 Mario Siegenthaler
category:            Control
build-type:          Simple
cabal-version:       >= 1.8


library
  exposed-modules: Data.SouSiT, Data.SouSiT.Sink, Data.SouSiT.Source, Data.SouSiT.Transform,
                   Data.SouSiT.Trans, Data.SouSiT.List, Data.SouSiT.File,
                   Data.SouSiT.Handle, Data.SouSiT.STM
  build-depends:   base > 4, bytestring, stm, mtl, transformers, resourcet
  ghc-options:     -Wall -fno-warn-missing-signatures


test-suite sousit-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-Is: TransTest.hs
  build-Depends: base > 4, mtl, sousit,
                 QuickCheck > 2, test-framework >= 0.3.3, test-framework-quickcheck2 >= 0.2.9  
